--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
   <meta http-equiv="cleartype" content="on">
 
   <link rel="stylesheet" href="css/style.css">
+  
+  <link media="only screen and (max-device-width: 480px)" href="css/design.css" type="text/css" rel="stylesheet" />
 
   <script src="js/libs/modernizr-2.0.6.min.js"></script>
 </head>
@@ -35,10 +37,27 @@
 
   <div id="container">
     <header>
-
+      <nav class="navigation">
+        <ul>
+          <li><a href="">Het Betere BoerenBed</a></li>
+          <li><a href="">'t Verblijf</a></li>
+          <li><a href="">Op de boerderij</a></li>
+          <li><a href="">Ander leuks</a></li>
+          <li><a href="">Onze boerderijen</a></li>
+          <li><a href="">Reserveren</a></li>
+          <li><img src="img/boerenbed-logo.png"></li>
+        </ul>
+      </nav>
     </header>
     <div id="main" role="main">
 
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      
     </div>
 
     <footer>
